--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <script src="input.js"></script>
     <script src="Classes.js"></script>
     <script src="functions.js"></script>
     <script defer src="./main.js"></script>
