--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 
 <head>
     <script src="input.js"></script>
-    <script src="Classes.js"></script>
+    <script src="classes.js"></script>
     <script src="functions.js"></script>
+    <script src="dynamicEnities.js"></script>
     <script defer src="./main.js"></script>
 </head>
 
 <body bgcolor="#000000">
-    <canvas width="800" height="800"></canvas>
+    <canvas width="1902" height="800"></canvas>
     <p style="color:white;">
         Click - place leg
     </p>
